# colombian-law-agent

./: .dvcignore  .env copy  .gitignore  README.md  app_draft.ipynb  data.dvc  pyproject.toml
.dvc/: config
app/: app.py  local_app.py  local_ui.py
data/: README.md
data/codigo_civil/text/: metadata.json
data/codigo_comercio/text/: metadata.json
data/codigo_general_del_proceso/text/: metadata.json
data/codigo_penal/text/: metadata.json
data/codigo_procedimental_laboral/text/: metadata.json
data/codigo_sustantivo_trabajo/text/: metadata.json
data/constitucion/text/: metadata.json
scripts/: create_qdrant_collections.py  generate_metadata.py  html-to-txt.py  scraper.py
src/: agent_state.py  agent_worfklow.py  cohere_rerank.py  prompts.py  retrievers.py  schemas.py  settings.py  tools.py
ui/: app.py  serve_streamlit.py
