[tool.poetry]
name = "legal-colombia"
version = "0.1.0"
description = ""
authors = ["jjovalle99 <jj.ovalle@uniandes.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
langchain = "^0.1.13"
langserve = {extras = ["all"], version = "^0.0.51"}
langchain-openai = "^0.1.0"
qdrant-client = "^1.8.0"
modal = "^0.61.92"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.data.dependencies]
playwright = "^1.42.0"
beautifulsoup4 = "^4.12.3"
dvc = {extras = ["s3"], version = "^3.48.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120